[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yinlabf25"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "seaborn",
    "tqdm",
    "imageio[ffmpeg]",
    "scikit-learn",
    "pot",
    "jupyter",
    "ipykernel",
]

[tool.setuptools]
py-modules = ["pdesolver"]
